<resources>
    <string name="app_name">CURIMAPU VEGETABLES v4_4_0611</string>
    <string name="user_login_export">User Login Vegetables</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="example_login_pass">Example : 123</string>
    <string name="login">Login</string>
    <string name="warning_empty_fields">You must enter username and password</string>
    <string name="warning_incorrect_fields">Incorrect username and / or password</string>
    <string name="sync_all_ok">Nothing to upload, everything synchronized</string>
    <string name="sync_not_internet">You have no internet connection</string>
    <string name="sync_up_menu">Uploads</string>
    <string name="region">Region : </string>
    <string name="comuna">Comuna : </string>
    <string name="provincia">Provincia : </string>
    <string name="nombre_agricultor">Nombre del agricultor : </string>
    <string name="oferta_negocio">Oferta de negocio : </string>
    <string name="title_new_ficha">¿Está seguro? </string>
    <string name="text_new_ficha">¿Desea crear un nuevo archivo? </string>
    <string name="button_create">Crear </string>
    <string name="anno">Año </string>
    <string name="ha_disp">Ha / Disponible </string>
    <string name="estado">Estado</string>
    <string name="todos">Todos</string>
    <string name="confeccion">Confeccion</string>
    <string name="aprobada">Apobada</string>
    <string name="rechazada">Rechazada</string>
    <string name="temporada">Temporada</string>
    <string name="datos_agricultor">Datos Agricultor</string>
    <string name="rut_agricultor">Rut Agricultor</string>
    <string name="tel_agricultor">Telefono Agricultor</string>
    <string name="admin">Administrador</string>
    <string name="admin_telephone">Telefono Administrador</string>
    <string name="datos_ficha">Datos Prospecto</string>
    <string name="localidad">Localidad</string>
    <string name="editar">Editar</string>
    <string name="seleccione_item">Seleccione</string>
    <string name="ok">OK</string>
    <string name="puntos_ampros">Puntos Ampros</string>
    <string name="ready_batch">Lote Listo (Lote de clientes)</string>
    <string name="raw_batch">Lote RAW</string>
    <string name="visitas_terminadas">Visita en estado terminado, no puedes agregar mas fotos.</string>
    <string name="entiendo"> Entiendo </string>
    <string name="fotos_agricultor"> Fotos Agricultor </string>
    <string name="fotos_cliente"> Fotos Clientes </string>
    <string name="pheno_first">Primero debe seleccionar un estado fenológico </string>
    <string name="falta_algo">¡Algo falta!</string>
    <string name="filtros_fichas">Filtros Prospectos</string>
    <string name="filtros_contrato">Filtros para contrato</string>
    <string name="filter">Filtrar</string>
    <string name="atencion">¡Atención!</string>
    <string name="mensaje_alerta_editar_visita">¿Estas seguro que deseas ver esta visita?
        Dependiendo del estado esta se podra editar o no.</string>
    <string name="modificar"> Modificar</string>
    <string name="estado_visita"> Estado Visita</string>
    <string name="estado_efectuado"> Efectuado </string>
    <string name="estado_efectuado_no"> No Efectuado </string>
    <string name="espere">Espere por favor</string>
    <string name="format_date">dd/mm/yyyy</string>
    <string name="format_set_input">Ingrese Valor</string>
    <string name="propiedad">Propiedad</string>
    <string name="valor">Valor</string>
    <string name="coordenates">Cordenadas</string>
    <string name="norting">Norte</string>
    <string name="set_norting">Ingrese latitude</string>
    <string name="easting">Este</string>
    <string name="set_easting">Ingrese longitude</string>
    <string name="ingrese_norte_manual">ingrese latitude manual</string>
    <string name="ingrese_easting_manual">ingrese longitude manual</string>
    <string name="aviso_siembra">Aviso Siembra SAG</string>
    <string name="siembra_sag">Siembra SAG</string>
    <string name="crop_rotation">Rotación de cultivos</string>
    <string name="t_2015">2015</string>
    <string name="set_cultivo">Ingrese Cultivo</string>
    <string name="t_2016">2016</string>
    <string name="t_2017">2017</string>
    <string name="t_2018">2018</string>
    <string name="analisis_suelo">análisis de suelo</string>
    <string name="entregado">Entregado</string>
    <string name="mezcla_aplicada">Tipo de Mezcla Aplicada</string>
    <string name="cantidad_aplicada">Cantidad Aplicada</string>
    <string name="insolation">Aislamiento</string>
    <string name="meters">Metros</string>
    <string name="lines">Líneas</string>
    <string name="female">hembra</string>
    <string name="sowing_lot">Lote de siembra</string>
    <string name="real_sowing">Hembra real de siembra (kg)</string>
    <string name="sowing_start">Fecha de inicio de siembra</string>
    <string name="sowing_end">Fecha de termino de siembra</string>
    <string name="sowing_seed_meter">sembrado de semillas / metros</string>
    <string name="row_distance">distancia de fila (M)</string>
    <string name="row_distance_min">distancia de fila (m)</string>
    <string name="spread">esparcir urea (N)</string>
    <string name="dose_uno">dosis 1</string>
    <string name="date_uno">Fecha 1</string>
    <string name="dose_dos">dosis 2</string>
    <string name="date_dos">Fecha 2</string>
    <string name="sparying_date">Fecha de pulverizacion de herbicidas</string>
    <string name="name_uno">Nombre 1</string>
    <string name="name_dos">Nombre 2</string>
    <string name="name_tres">Nombre 3</string>
    <string name="date_tres">Fecha 3</string>
    <string name="emergence_herbicide">Herbicida de pre-emergencia</string>
    <string name="dose">dosis</string>
    <string name="water_lts">Agua (Lts)</string>
    <string name="plant_m">Planta/M</string>
    <string name="population">Población (Plantas/HA)</string>
    <string name="basta_date">fecha de pulverización BASTA</string>
    <string name="basta_spray_uno">Spray Basta 1</string>
    <string name="basta_spray_dos">Spray Basta 2</string>
    <string name="basta_spray_tres">Spray Basta 3</string>
    <string name="basta_spray_cuatro">Spray Basta 4</string>
    <string name="basta_spray_cuatro_ha">Spray Basta 4 Ha</string>
    <string name="titulo_largo_form">bruchus pisorum l. y aplicación preventiva de esclerotonía</string>
    <string name="product">Producto</string>
    <string name="dose_lt_ha">dosis (Lt/Ha)</string>
    <string name="foliar_app">aplicación foliar</string>
    <string name="foliar">Foliar</string>
    <string name="notice_sag">Aviso SAG</string>
    <string name="flowering_estim">estimación de floración</string>
    <string name="flowering_start">inicio de floración</string>
    <string name="flowering_end">final de floración</string>
    <string name="fertility">Fertilidad</string>
    <string name="fungicide_app">aplicación de fungicidas</string>
    <string name="fungicide">Fungicida</string>
    <string name="plant_number_checked">número de planta verificado</string>
    <string name="check">Verificado</string>
    <string name="main_characteristics">características principales</string>
    <string name="insepection">inspección</string>
    <string name="insepection_s">inspección</string>
    <string name="dessicant_app">aplicación desecante</string>
    <string name="estimated_date">fecha estimada</string>
    <string name="real_date">fecha real</string>
    <string name="observations">Observaciones</string>
    <string name="swathing_date">fecha de envainado</string>
    <string name="swathing_date_s">fecha de envainado</string>
    <string name="yield_estimation">Estimación del rendimiento pre-limpiada</string>
    <string name="kg_ha">Kg/Ha</string>
    <string name="harvest_estimation">Estimación de la cosecha </string>
    <string name="real_harvest_date"> fecha real de cosecha</string>
    <string name="beginning_date">Fecha de inicio</string>
    <string name="beginning_dep">Principio de depuración</string>
    <string name="end_date"> fecha de finalización </string>
    <string name="harvest_machine">Máquina de cosecha </string>
    <string name="owner">Dueño</string>
    <string name="model">Modelo</string>
    <string name="seed_hrv_mois">humedad de la cosecha de semillas</string>
    <string name="percent">%</string>
    <string name="insecticide_app">Aplicación de insecticida</string>
    <string name="off_type">Fuera de tipo</string>
    <string name="date">Fecha</string>
    <string name="f">F</string>
    <string name="seleccione_fecha">Seleccione fecha</string>
    <string name="fotos">fotos</string>
    <string-array name="anos_toolbar">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string name="select">--Seleccione--</string>
    <string-array name="fenologico">
        <item>@string/select</item>
        <item>SIEMBRA</item>
        <item>TRANSPLANTE</item>
        <item>VEGETATIVO</item>
        <item>PRE-FLORACION</item>
        <item>FLORACION</item>
        <item>LLENADO</item>
        <item>PRE-COSECHA</item>
        <item>COSECHA</item>
        <item>POST COSECHA</item>
        <item>MONITOREO</item>
        <item>SIN ESPECIFICAR</item>
    </string-array>
    <string-array name="dureza">
        <item>@string/select</item>
        <item>FIRME</item>
        <item>MEDIO</item>
        <item>BLANDO</item>
        <item>SIN ESPECIFICAR</item>
    </string-array>
    <string-array name="crecimiento">
        <item>@string/select</item>
        <item>EXCELENTE</item>
        <item>BUENA</item>
        <item>REGULAR</item>
        <item>MALA</item>
        <item>SIN ESPECIFICAR</item>
    </string-array>
    <string name="cosecha">Cosecha</string>
    <string-array name="maleza">
        <item>@string/select</item>
        <item>BAJA</item>
        <item>REGULAR</item>
        <item>ALTA</item>
        <item>SIN ESPECIFICAR</item>
    </string-array>
    <string name="subtitles_visit">Anexos</string>
    <string name="subtitles_start">Inicio</string>
    <string name="subtitles_records">Prospectos</string>
    <string name="subtitles_contracts">Contratos</string>
    <string name="subtitles_config">configuraciones</string>
    <string name="subtitles_salir">Salir</string>
    <string name="alfanumericos_sin_signos">abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ áéíóú ÁÉÍÓÚ 0123456789 </string>
    <string name="alfanumericos_con_signos">abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ áéíóú ÁÉÍÓÚ 0123456789 +-*/=., </string>
    <string name="numerico_entero">0123456789</string>
    <string name="numerico_decimal">0123456789.</string>
    <string name="alfanumerico_fecha">0123456789 -</string>
    <string name="alfanumerico_hora">0123456789 :</string>
    <string name="agricultor">Agricultor</string>
    <string name="potrero">Potrero</string>
    <string name="variedad">Variedad</string>
    <string name="accion">Acción</string>
    <string name="fecha">Fecha</string>
    <string name="form_ver">Ver</string>
    <string name="subtitle_anexo_fecha">Anexo Fecha</string>
    <string name="visita_anterior_text">Visita Anterior</string>
    <string name="recomendacion_anterior">Recomendacion Anterior</string>
    <string name="title_warning_ranked">esta evaluacion se guardara al guardar la visita</string>
    <string name="pregunta_ranking">de 1 a 5 ¿Como estuvo la visita anterior?</string>
    <string name="comentario">Comentario</string>
    <string name="comentario_evaluacion">escriba aqui comentario sobre evaluacion</string>
    <string name="detalle">detalle</string>
    <string name="etapa">Etapa</string>
    <string name="eliminar">Eliminar</string>
    <string name="nuevo">nuevo</string>
    <string name="curiweb">Curiweb</string>
</resources>