<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_titulo_rankear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visita_anterior_text"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_fecha_rankear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text=""
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_rankear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_titulo_recom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recomendacion_anterior"
        android:gravity="start"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/tv_fecha_rankear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/tv_recom_rankear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textAppearance="?android:textAppearanceSmall"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_recom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_waring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_warning_ranked"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/tv_recom_rankear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_dark"

        />

    <TextView
        android:id="@+id/tv_titulo_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_ranking"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/tv_waring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"

        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_ranking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/tv_titulo_obs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comentario"
        android:gravity="start"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cont_et_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_obs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:errorEnabled="true"
        app:helperText="@string/comentario_evaluacion"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_comentario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minLines="2"
            android:maxLines="5"
            android:maxLength="500"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>