<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/padding"
    android:elevation="@dimen/padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/img_activated"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_comuna_fichas"
            android:contentDescription="@string/accion" />


        <TextView
            android:id="@+id/lbl_region_fichas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_region_fichas"
            app:layout_constraintBottom_toBottomOf="@id/tv_region_fichas"
            app:layout_constraintEnd_toStartOf="@id/tv_region_fichas"
            />

        <TextView
            android:id="@+id/tv_region_fichas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_region_fichas"
            app:layout_constraintEnd_toStartOf="@id/lbl_comuna_fichas"
            />

       <TextView
            android:id="@+id/lbl_comuna_fichas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comuna"
            app:layout_constraintStart_toEndOf="@id/tv_region_fichas"
            app:layout_constraintTop_toTopOf="@id/tv_comuna_fichas"
            app:layout_constraintBottom_toBottomOf="@id/tv_comuna_fichas"
           app:layout_constraintEnd_toStartOf="@id/tv_comuna_fichas"

            />

        <TextView
            android:id="@+id/tv_comuna_fichas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/lbl_comuna_fichas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_activated"
            />


        <TextView
            android:id="@+id/lbl_agricultor_fichas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_agricultor"
            app:layout_constraintTop_toBottomOf="@id/tv_comuna_fichas"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_agricultor_fichas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@id/lbl_agricultor_fichas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/lbl_negocio_fichas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oferta_negocio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_negocio_fichas"
            app:layout_constraintBottom_toBottomOf="@id/tv_negocio_fichas"
            app:layout_constraintEnd_toStartOf="@id/tv_negocio_fichas"
            />
        <TextView
            android:id="@+id/tv_negocio_fichas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_agricultor_fichas"
            app:layout_constraintStart_toEndOf="@id/lbl_negocio_fichas"
            app:layout_constraintEnd_toEndOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>