<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cardview_visitas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/padding_small"
    android:padding="@dimen/padding_small"
    android:elevation="@dimen/padding"
    android:background="@color/colorBackgroundList"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:id="@+id/lbl_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
            android:id="@+id/fecha_lista_visitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_fecha"
            tools:text="02-19-2020"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"

            />

        <TextView
            android:id="@+id/hora_lista_visitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbl_fecha"
            app:layout_constraintStart_toEndOf="@id/fecha_lista_visitas"
            tools:text="12:44:00"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginStart="@dimen/padding_small"

            />
        <TextView
            android:id="@+id/lbl_agricultor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agricultor"
            android:layout_marginTop="@dimen/padding_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintTop_toBottomOf="@id/fecha_lista_visitas"
            app:layout_constraintStart_toStartOf="parent"
           />

        <TextView
            android:id="@+id/nombre_agricultor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="NOMBRE AGRICULTOR "
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@id/lbl_agricultor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/lbl_etapa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/etapa"
            android:layout_marginTop="@dimen/padding_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintTop_toBottomOf="@id/nombre_agricultor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lbl_detalle_etapa"
          />


        <TextView
            android:id="@+id/nombre_etapa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@id/lbl_etapa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nombre_detalle_etapa"
            android:layout_below="@id/nombre_agricultor"
            tools:text="FLOWERING"
            android:textColor="@color/colorOnSurface"/>

        <TextView
            android:id="@+id/lbl_detalle_etapa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detalle"
            android:layout_marginTop="@dimen/padding_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintTop_toBottomOf="@id/nombre_agricultor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_etapa"
            android:textAlignment="textEnd"
            />

        <TextView
            android:id="@+id/nombre_detalle_etapa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="PRE-flowering"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@id/lbl_detalle_etapa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nombre_etapa"
            android:textColor="@color/colorOnSurface"
            android:textAlignment="textEnd"
            />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:layout_marginTop="@dimen/padding_small"
            app:layout_constraintTop_toBottomOf="@id/nombre_detalle_etapa"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btn_Ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_ver"
            android:layout_marginTop="@dimen/padding_small"
            app:layout_constraintTop_toBottomOf="@id/nombre_detalle_etapa"
            app:layout_constraintStart_toStartOf="parent"
            />


</androidx.constraintlayout.widget.ConstraintLayout>